--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,13 +8,17 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-  
-  
-    
-    <%= yield %>
-  </body>
-</html>
   <body>
+    <header>
+      <% if session[:user_id] %>
+          <li>
+            現在ログインしているユーザーのid:
+             <%= session[:user_id] %>    
+          </li>
+          
+      <% end %>
+    </header>
     <%= yield %>
   </body>
 </html>
+
