--- a/app/views/users/login_form.html.erb
+++ b/app/views/users/login_form.html.erb
@@ -1,3 +1,7 @@
+  
+  <div ><%= @error_message %></div>
+
+
   <%= form_tag("/login") do %>
      <p>メールアドレス</p>
        <input name="email" value="<%= @email %>">
@@ -5,3 +9,6 @@
        <input type="password" name="password" value="<%= @password %>">
        <input type="submit" value="ログイン">
    <% end %>
+
+
+  
