--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,66 +1,50 @@
 <h1>Judgeアプリとは</h1>
 　<h2>これから商品を売り出したい人が商品を一般の人にジャッジしてもらうアプリ</h2>		
-	<body>
+    <body>
       <header>
         <div class="header-logo">
-        <%= link_to("judgeApp", "/users") %>
+          <%= link_to "judgeApp",  users_path %>
         </div>
-          
-            <div>
-              現在ログインしているユーザーのid:
-               <%= session[:user_id] %>    
-            </div>
-          
+          <div>
+            現在ログインしているユーザーのid:
+            <%= session[:user_id] %>    
+        </div>
           <ul class="header-menus">
-
-   
-          	<li>
-              <%= link_to("商品投稿", "/products/new") %>
+            <li>
+              <%= link_to "商品投稿", users_path %>
             </li>
             <li>
-              <%= link_to("Judge", "/products/new") %>
+              <%= link_to "Judge", users_path %>
             </li>
             <li>
-              <%= link_to("ユーザー一覧", "/users/index") %>
+              <%= link_to "ユーザー一覧", users_path %>
             </li>
             <li>
-              <%= link_to("新規登録", "/signup") %>
+              <%= link_to "新規登録", new_user_path %>
             </li>
             <li>
-              <%= link_to("ログイン", "/login") %>
+              <%= link_to "ログイン", login_path %>
             </li>
             <li>
-              <%= link_to("投稿一覧", "/posts/index") %>
+              <%= link_to "投稿一覧", users_path %>
             </li>
-
-         
           </ul>
-
-      
-
       </header>
-
       <main>
-      
-  			<% @users.each do |user| %>
-  			<tr>
-  				<td><%= user.first_name %></td>
-  				<td><%= user.last_name %></td>
-  				<td><%= user.email %></td>
-  				<td><%= user.password %></td>
-  				<td><%= user.age %></td>
-  				<td><%= user.female_male %></td>
-  				<td><%= user.postal_code %></td>
-  				<td><%= user.address %></td>
-  				<td><%= user.tel %></td>
-  				
-  				<td><%= link_to '編集', edit_user_path(user) %></td>
-  				<td><%= link_to '削除', user_path(user), method: :delete %></td>
-  			</tr>
-  			<% end %>
-  		
-
-
+  	    <% @users.each do |user| %>
+  		  <tr>
+  		    <td><%= user.first_name %></td>
+  			<td><%= user.last_name %></td>
+  			<td><%= user.email %></td>
+  			<td><%= user.password %></td>
+  			<td><%= user.age %></td>
+  			<td><%= user.female_male %></td>
+  			<td><%= user.postal_code %></td>
+  			<td><%= user.address %></td>
+  			<td><%= user.tel %></td>
+  			<td><%= link_to '編集', edit_user_path(user) %></td>
+  			<td><%= link_to '削除', user_path(user), method: :delete %></td>
+  		  </tr>
+  		<% end %>
       </main>
-
     </body>
