--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,46 +5,52 @@
         <div class="header-logo">
           <%= link_to "judgeApp",  users_path %>
         </div>
-          <div>
-            現在ログインしているユーザーのid:
-            <%= session[:user_id] %>    
-        </div>
-          <ul class="header-menus">
-            <li>
-              <%= link_to "商品投稿", users_path %>
-            </li>
-            <li>
-              <%= link_to "Judge", users_path %>
-            </li>
-            <li>
-              <%= link_to "ユーザー一覧", users_path %>
-            </li>
-            <li>
-              <%= link_to "新規登録", new_user_path %>
-            </li>
-            <li>
-              <%= link_to "ログイン", login_path %>
-            </li>
-            <li>
-              <%= link_to "投稿一覧", users_path %>
-            </li>
-          </ul>
-      </header>
-      <main>
-  	    <% @users.each do |user| %>
-  		  <tr>
-  		    <td><%= user.first_name %></td>
-  			<td><%= user.last_name %></td>
-  			<td><%= user.email %></td>
-  			<td><%= user.password %></td>
-  			<td><%= user.age %></td>
-  			<td><%= user.female_male %></td>
-  			<td><%= user.postal_code %></td>
-  			<td><%= user.address %></td>
-  			<td><%= user.tel %></td>
-  			<td><%= link_to '編集', edit_user_path(user) %></td>
-  			<td><%= link_to '削除', user_path(user), method: :delete %></td>
-  		  </tr>
-  		<% end %>
-      </main>
-    </body>
+          <% if session[:user_id] %>
+            <div>
+              現在ログインしているユーザーのid:
+              <%= session[:user_id] %>    
+            </div>
+              <ul class="header-menus">
+                <li>
+		          <%= link_to "ログアウト", logout_path %>
+		        </li>
+		  <% else %>
+		  		<li>
+		          <%= link_to "ログイン", login_path %>
+		        </li>
+		  <% end %>
+                <li>
+                  <%= link_to "商品投稿", users_path %>
+                </li>
+		        <li>
+		          <%= link_to "Judge", users_path %>
+		        </li>
+		        <li>
+		          <%= link_to "ユーザー一覧", users_path %>
+		        </li>
+		        <li>
+		          <%= link_to "新規登録", new_user_path %>
+		        </li>
+		        <li>
+		          <%= link_to "投稿一覧", users_path %>
+		        </li>
+		     </ul>
+		  </header>
+		  <main>
+			<% @users.each do |user| %>
+			　　<tr>
+				  <td><%= user.first_name %></td>
+			      <td><%= user.last_name %></td>
+				  <td><%= user.email %></td>
+				  <td><%= user.password %></td>
+				  <td><%= user.age %></td>
+				  <td><%= user.female_male %></td>
+				  <td><%= user.postal_code %></td>
+				  <td><%= user.address %></td>
+				  <td><%= user.tel %></td>
+				  <td><%= link_to '編集', edit_user_path(user) %></td>
+				  <td><%= link_to '削除', user_path(user), method: :delete %></td>
+			   </tr>
+			<% end %>
+		  </main>
+		</body>
