--- a/app/views/users/login_form.html.erb
+++ b/app/views/users/login_form.html.erb
@@ -1,8 +1,9 @@
   <div ><%= @error_message %></div>
- <%= form_tag("/login") do %>
-     <p>メールアドレス</p>
-       <input name="email" value="<%= @email %>">
-     <p>パスワード</p>
+    <%= form_tag("/login") do %>
+      <p>メールアドレス</p>
+        <input name="email" value="<%= @email %>">
+      <p>パスワード</p>
        <input type="password" name="password" value="<%= @password %>">
        <input type="submit" value="ログイン">
    <% end %>
+        <div><%= link_to "トップページ", users_path %></div>
