--- a/app/views/users/login_form.html.erb
+++ b/app/views/users/login_form.html.erb
@@ -1,9 +1,12 @@
+  <h1>ログイン</h1>
   <div ><%= @error_message %></div>
-    <%= form_tag("/login") do %>
-      <p>メールアドレス</p>
-        <input name="email" value="<%= @email %>">
-      <p>パスワード</p>
-       <input type="password" name="password" value="<%= @password %>">
-       <input type="submit" value="ログイン">
-   <% end %>
-        <div><%= link_to "トップページ", users_path %></div>
+    <%= form_with url:login_path do |f| %>
+      <div><%= f.label :'メールアドレス' %><div>
+      <div><%= f.text_field :email %></div>
+      <div><%= f.label :'パスワード' %><div>
+      <div><%= f.text_field :password %></div>
+      <div><%= f.submit "ログイン" %></div>
+    <% end %>
+      <div><%= link_to "トップページ", users_path %></div>
+
+
