--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -22,9 +22,9 @@
   </tr>
   <div><%= link_to "トップページ", products_path %></div>
   <!-- レビューページを作ったらリンクする -->
-  <div><%= link_to "レビュー", products_path %></div>
+  <div><%= link_to "レビュー", product_reviews_new_path(@product) %></div>
   <% if @product.user_id == @current_user.id %>
-  <div><%= link_to "編集", edit_product_path(@product) %></div>
+  <div><%= link_to "編集", edit_product_path %></div>
   <div><%= link_to '削除', product_path(@product), method: :delete %></div>
   <% end %>
 </table>
