--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,44 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   <body>
+    <h1>Judgeアプリとは</h1>
+　<h2>これから商品を売り出したい人が商品を一般の人にジャッジしてもらうアプリ</h2>   
+<body>
+  <header>
+    <div class="header-logo">
+      <%= link_to "judgeApp",  users_path %>
+    </div>
+    <% if session[:user_id] %>
+    <div>
+      現在ログインしているユーザーのid:
+      <%= session[:user_id] %>    
+    </div>
+    <ul class="header-menus">
+      <li>
+        <%= link_to "ログアウト", logout_path %>
+      </li>
+      <% else %>
+      <li>
+        <%= link_to "ログイン", login_path %>
+      </li>
+      <% end %>
+      <li>
+        <%= link_to "商品投稿", new_product_path %>
+      </li>
+      <li>
+        <%= link_to "Judge", products_path %>
+      </li>
+      <li>
+        <%= link_to "ユーザー一覧", users_path %><!-- 消す -->
+      </li>
+      <li>
+        <%= link_to "新規登録", new_user_path %>
+      </li>
+      <li>
+        <%= link_to "投稿一覧", products_path %>
+      </li>
+    </ul>
+  </header>
     <%= yield %>
   </body>
 </html>
