ログインユーザーが新規登録出来ないように設定。
ログイン時に商品一覧ページへ設定。

--- a/app/views/users/login_form.html.erb
+++ b/app/views/users/login_form.html.erb
@@ -7,4 +7,4 @@
   <div><%= f.text_field :password %></div>
   <div><%= f.submit "ログイン" %></div>
 <% end %>
-<div><%= link_to "トップページ", users_path %></div>
+<div><%= link_to "トップページ", products_path %></div>
