--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -1,3 +1,89 @@
 // Place all the styles related to the reviews controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.review {
+  text-align: center;
+  margin-right: auto;
+  margin-left: auto;
+  width: 80%;
+  height: auto;
+}
+
+.r-wrapper{
+  background-color: #F1F1F1;
+}
+
+.sample {
+  font-family: Meiryo, "Hiragino Kaku Gothic Pro W3", Courier New, sans-serif;
+  text-align: center;
+  font-size: 30px;
+  padding-top: 20px;
+  border-bottom: 2px solid #000; 
+}
+
+.label-r {
+  display: block;
+  font-size: 20px;
+  margin-top: 30px;
+  color: #888888;
+  font-size: 20px;
+  width: 25%;
+  margin-right: auto;
+  margin-left: auto;
+  border-bottom:  3px solid #888888;
+}
+
+.label-c {
+  display: block;
+  font-size: 20px;
+  margin-top: 30px;
+  color: #888888;
+  font-size: 20px;
+}
+.btm-r {
+  display: inline-block;
+  text-decoration: none;
+  color: #FFF;
+  width: 300px;
+  height: 80px;
+  line-height: 80px;
+  border-radius: 50%;
+  text-align: center;
+  overflow: hidden;
+  background-image: linear-gradient(45deg, #709dff 0%, #91fdb7 100%);
+  transition: .4s fca;
+  margin-top: 30px ;
+}
+.comment-r {
+  font-size: 15px;
+  margin: 30px 30px 0 0 ;
+  display: inline-block;
+  padding: 0.5em 3em;
+  border-radius: 4px;
+  background-color: white;
+  font-family: Meiryo, "Hiragino Kaku Gothic Pro W3", Courier New, sans-serif;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.29);
+  margin: 30px auto 0 auto ;
+  text-align: center;
+}
+  
+.r-btm {
+  display: block;
+  text-decoration: none;
+  color: #FFF;
+  font-size: 15px;
+  width: 120px;
+  height: 120px;
+  line-height: 120px;
+  border-radius: 50%;
+  text-align: center;
+  overflow: hidden;
+  background-image: linear-gradient(45deg, #709dff 0%, #91fdb7 100%);
+  transition: .4s fca;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
