--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,130 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.main-user {
+  width: 100%;
+  height: 800px;
+  background: linear-gradient(-45deg, rgba(246, 255, 0, .8), rgba(255, 0, 161, .8));
+  background-size: cover;
+}
+
+.container {
+  background: linear-gradient(-45deg, rgba(246, 255, 0, .8), rgba(255, 0, 161, .8));
+  background-size: cover;
+  position: absolute;
+  top: 40%;
+  left: 30%;
+  width: 42%;
+  height: 85%;
+  margin-top: -150px;
+  overflow: hidden;
+  opacity: 0.7;
+
+}
+
+.main-user h1{
+  text-align: center;
+  color: white;
+  font-family: Meiryo, "Hiragino Kaku Gothic Pro W3", Courier New, sans-serif;
+  font-size: 20px;
+}
+
+.label-new {
+  display: block;
+  color: white;
+  padding: 2px;
+  text-align: center;
+}
+
+.field-new { 
+  font-size: 15px;
+  display: inline-block;
+  padding: 0.3em 1em;
+  text-decoration: none;
+  border-radius: 4px;
+  background-color: white;
+  font-family: Meiryo, "Hiragino Kaku Gothic Pro W3", Courier New, sans-serif;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.29);
+  margin-left: 75px;
+  text-align: left;
+  
+}
+
+.radio {
+ margin-left: 170px;
+}
+
+.btm {
+  display: inline-block;
+  padding: 7px 30px;
+  border-radius: 25px;
+  color: #FFF;
+  background-image: linear-gradient(45deg, #FFC107 0%, #ff8b5f 100%);
+  margin-left: 220px;
+  margin-top: 20px;
+  font-size: 15px;
+}
+
+.wrapper {
+  text-align: center;
+  background: linear-gradient(-45deg, rgba(246, 255, 0, .8), rgba(255, 0, 161, .8));
+  background-size: cover;
+  position: absolute;
+  top: 45%;
+  left: 30%;
+  width: 42%;
+  height: 60%;
+  margin-top: -150px;
+  overflow: hidden;
+  opacity: 0.7;
+}
+
+.wrapper h1 {
+  text-align: center;
+  padding-top: 50px;
+  font-size: 25px;
+  font-family: 'Hiragino Kaku Gothic StdN';
+ 
+}
+
+.label-log {
+  display: inline-block;
+  text-align: center;
+  margin-top: 20px;
+  margin-right: auto;
+  margin-left: auto;
+  width: 30%;
+  height: 10px;
+  color: white;
+  
+}
+
+
+.log-field { 
+  font-size: 15px;
+  display: inline-block;
+  text-align: left;
+  margin-top: 30px;
+  margin-right: auto;
+  margin-left: auto;
+  padding: 0.3em 1em;
+  border-radius: 4px;
+  background-color: white;
+  font-family: Meiryo, "Hiragino Kaku Gothic Pro W3", Courier New, sans-serif;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.29);
+}
+
+.btm-log {
+  display: inline-block;
+  padding: 7px 30px;
+  border-radius: 25px;
+  color: #FFF;
+  background-image: linear-gradient(45deg, #FFC107 0%, #ff8b5f 100%);
+  margin-top: 30px;
+  font-size: 15px;
+  font-family: 'Hiragino Kaku Gothic StdN';
+}
+
+
+
