--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,56 +1,60 @@
-<h1>Review sheets</h1>
-<%= flash[:notice] %>
-<%= form_with(model: [@product, @review] , local: true) do |f| %>
-  <div><%= f.label :'総合' %><div>
-  <div><%= f.radio_button :total, "1" %> 1<div>
-  <div><%= f.radio_button :total, "2" %> 2<div> 
-  <div><%= f.radio_button :total, "3" %> 3<div>
-  <div><%= f.radio_button :total, "4" %> 4<div>
-  <div><%= f.radio_button :total, "5" %> 5<div>
-  <div><%= f.label :'パッケージ' %><div>
-  <div><%= f.radio_button :package, "1" %> 1<div>
-  <div><%= f.radio_button :package, "2" %> 2<div> 
-  <div><%= f.radio_button :package, "3" %> 3<div>
-  <div><%= f.radio_button :package, "4" %> 4<div>
-  <div><%= f.radio_button :package, "5" %> 5<div>
-  <div><%= f.label :'価格' %><div>
-  <div><%= f.radio_button :price, "1" %> 1<div>
-  <div><%= f.radio_button :price, "2" %> 2<div> 
-  <div><%= f.radio_button :price, "3" %> 3<div>
-  <div><%= f.radio_button :price, "4" %> 4<div>
-  <div><%= f.radio_button :price, "5" %> 5<div>	
-  <div><%= f.label :'カラー' %><div>
-  <div><%= f.radio_button :color, "1" %> 1<div>
-  <div><%= f.radio_button :color, "2" %> 2<div> 
-  <div><%= f.radio_button :color, "3" %> 3<div>
-  <div><%= f.radio_button :color, "4" %> 4<div>
-  <div><%= f.radio_button :color, "5" %> 5<div>
-  <div><%= f.label :'量・大きさ' %><div>
-  <div><%= f.radio_button :amount, "1" %> 1<div>
-  <div><%= f.radio_button :amount, "2" %> 2<div> 
-  <div><%= f.radio_button :amount, "3" %> 3<div>
-  <div><%= f.radio_button :amount, "4" %> 4<div>
-  <div><%= f.radio_button :amount, "5" %> 5<div>	
-  <div><%= f.label :'ネーミング' %><div>
-  <div><%= f.radio_button :naming, "1" %> 1<div>
-  <div><%= f.radio_button :naming, "2" %> 2<div> 
-  <div><%= f.radio_button :naming, "3" %> 3<div>
-  <div><%= f.radio_button :naming, "4" %> 4<div>
-  <div><%= f.radio_button :naming, "5" %> 5<div>
-  <div><%= f.label :'コンセプト' %><div>
-  <div><%= f.radio_button :concept, "1" %> 1<div>
-  <div><%= f.radio_button :concept, "2" %> 2<div> 
-  <div><%= f.radio_button :concept, "3" %> 3<div>
-  <div><%= f.radio_button :concept, "4" %> 4<div>
-  <div><%= f.radio_button :concept, "5" %> 5<div>
-  <div><%= f.label :'バランス' %><div>
-  <div><%= f.radio_button :balance, "1" %> 1<div>
-  <div><%= f.radio_button :balance, "2" %> 2<div> 
-  <div><%= f.radio_button :balance, "3" %> 3<div>
-  <div><%= f.radio_button :balance, "4" %> 4<div>
-  <div><%= f.radio_button :balance, "5" %> 5<div>
-  <div><%= f.label :'コメント' %></div>
-  <div><%= f.text_field :comment %></div> 
-  <div><%= f.submit "レビューする" %></div>	
-<% end %>
+<div class="review">
+  <div class="r-wrapper">
+    <div class="sample">Review sheets</div>
+    <%= flash[:notice] %>
+    <%= form_with(model: [@product, @review] , local: true) do |f| %>
+      <div class="label-r"><%= f.label :'総合' %></div>
+      <div class="btm-r"><%= f.radio_button :total, "1" %> 1
+                         <%= f.radio_button :total, "2" %> 2 
+                         <%= f.radio_button :total, "3" %> 3
+                         <%= f.radio_button :total, "4" %> 4
+                         <%= f.radio_button :total, "5" %> 5</div>
+      <div class="label-r"><%= f.label :'パッケージ' %></div>
+      <div class="btm-r"><%= f.radio_button :package, "1" %> 1
+                         <%= f.radio_button :package, "2" %> 2 
+                         <%= f.radio_button :package, "3" %> 3
+                         <%= f.radio_button :package, "4" %> 4
+                         <%= f.radio_button :package, "5" %> 5</div>
+      <div class="label-r"><%= f.label :'価格' %></div>
+      <div class="btm-r"><%= f.radio_button :price, "1" %> 1
+                         <%= f.radio_button :price, "2" %> 2 
+                         <%= f.radio_button :price, "3" %> 3
+                         <%= f.radio_button :price, "4" %> 4
+                         <%= f.radio_button :price, "5" %> 5</div>	
+      <div class="label-r"><%= f.label :'カラー' %></div>
+      <div class="btm-r"><%= f.radio_button :color, "1" %> 1
+                         <%= f.radio_button :color, "2" %> 2 
+                         <%= f.radio_button :color, "3" %> 3
+                         <%= f.radio_button :color, "4" %> 4
+                         <%= f.radio_button :color, "5" %> 5</div>
+      <div class="label-r"><%= f.label :'量・大きさ' %></div>
+      <div class="btm-r"><%= f.radio_button :amount, "1" %> 1
+                         <%= f.radio_button :amount, "2" %> 2 
+                         <%= f.radio_button :amount, "3" %> 3
+                         <%= f.radio_button :amount, "4" %> 4
+                         <%= f.radio_button :amount, "5" %> 5</div>
+      <div class="label-r"><%= f.label :'ネーミング' %></div>
+      <div class="btm-r"><%= f.radio_button :naming, "1" %> 1
+                         <%= f.radio_button :naming, "2" %> 2
+                         <%= f.radio_button :naming, "3" %> 3
+                         <%= f.radio_button :naming, "4" %> 4
+                         <%= f.radio_button :naming, "5" %> 5</div>
+      <div class="label-r"><%= f.label :'コンセプト' %></div>
+      <div class="btm-r"><%= f.radio_button :concept, "1" %> 1
+                         <%= f.radio_button :concept, "2" %> 2
+                         <%= f.radio_button :concept, "3" %> 3
+                         <%= f.radio_button :concept, "4" %> 4
+                         <%= f.radio_button :concept, "5" %> 5</div>
+      <div class="label-r"><%= f.label :'バランス' %></div>
+      <div class="btm-r"><%= f.radio_button :balance, "1" %> 1
+                         <%= f.radio_button :balance, "2" %> 2
+                         <%= f.radio_button :balance, "3" %> 3
+                         <%= f.radio_button :balance, "4" %> 4
+                         <%= f.radio_button :balance, "5" %> 5</div>
+      <div class="label-c"><%= f.label :'コメント' %></div>
+      <div class="comment-r"><%= f.text_area :comment, size: "60x10", style: "border: none" %></div> 
+      <div class="r-btm"><%= f.submit "レビュー" %></div>	
+    <% end %>
+   </div>
+</div> 
  <div><%= link_to "トップページ", products_path %></div>
