--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -48,7 +48,7 @@
   width: 300px;
   height: 80px;
   line-height: 80px;
-  border-radius: 50%;
+  /*border-radius: 50%;*/
   text-align: center;
   overflow: hidden;
   background-image: linear-gradient(45deg, #709dff 0%, #91fdb7 100%);
@@ -72,14 +72,15 @@
   display: block;
   text-decoration: none;
   color: #FFF;
-  font-size: 15px;
+  font-size: 20px;
   width: 120px;
   height: 120px;
   line-height: 120px;
-  border-radius: 50%;
+  /*border-radius: 50%;*/
   text-align: center;
   overflow: hidden;
-  background-image: linear-gradient(45deg, #709dff 0%, #91fdb7 100%);
+  background-color: #888888;
+  /*background-image: linear-gradient(45deg, #709dff 0%, #91fdb7 100%);*/
   transition: .4s fca;
   margin-top: 30px;
   margin-bottom: 30px;
