--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -53,7 +53,7 @@
                          <%= f.radio_button :balance, "5" %> 5</div>
       <div class="label-c"><%= f.label :'コメント' %></div>
       <div class="comment-r"><%= f.text_area :comment, size: "60x10", style: "border: none" %></div> 
-      <div class="r-btm"><%= f.submit "レビュー" %></div>	
+           <%= f.submit "review", class:"r-btm" %>
     <% end %>
    </div>
 </div> 
